# Areeb-Competition-Project

./: README.md
Backend/: pyproject.toml
Backend/project/: settings.py
